--- a/web/includes/toolbar.html
+++ b/web/includes/toolbar.html
@@ -55,7 +55,7 @@
 
                         <input class="form-control" name="search"
                             placeholder="Search Here" autocomplete="off"
-                            autofocus="autofocus" type="text" ng-model="text" >
+                            autofocus="autofocus" type="text" ng-model="text" />
                     </div>
                 </div>
             </form>
